# Python_projects

./: .gitignore  README.md
contact_manager/: README.md  pyproject.toml  requirements.txt
contact_manager/data/: contacts.bak  contacts.csv  contacts.json
contact_manager/src/: contacts.py  main.py
contact_manager/tests/: test_contact.py
currency_converter_Flask/: README.md  pyproject.toml  requirements.txt
currency_converter_GUI/: readme.md
password_manager/: README.md  pyproject.toml  requirements.txt
password_manager/src/: crypto_utils.py  main.py  manager.py  ui.py
password_manager/tests/: test_crypto_utils.py  test_manager.py
rock_paper_scissors/: README.md
rock_paper_scissors 2/: README.md  pyproject.toml
rock_paper_scissors 2/dev/: rps.py  rps2.py
rock_paper_scissors 2/src/: main.py
rock_paper_scissors/src/: game.py
rock_paper_scissors/tests/: test_game.py
