[project]
name = "password-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Michal Puškáč",email = "133041741+michalpuskac@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "pyfiglet (>=1.0.2,<2.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
